# mtop

./: pyproject.toml
mtop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
shm/: =0.50  main.py
shm/core/: cpu.py  disk.py  memory.py  network.py  sys_info.py  uptime.py
shm/metrics/: cpu_calc.py  mem_calc.py  net_calc.py
shm/ui/: app.py  colors.py  layout.py  system_history.json
shm/ui/widgets/: common.py  cpu.py  disk.py  memory.py  network.py  sys_info.py  uptime.py
