[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtop"
version = "0.1.0"
description = "Modern Linux system monitor"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "textual>=0.50",
    "asciichartpy"
]

[project.scripts]
mtop = "shm.ui.app:main"
